--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ button {
   height: 380px;
   background-color: var(--background-color);
 }
-.doing-list{
+.doing-list {
   gap: 24px;
   display: flex;
 }
@@ -325,12 +325,22 @@ button {
 /* hero */
 .hero {
   padding: 188px 0;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--color-navy-blue);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/hero-img.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   color: var(--background-color);
   font-size: 56px;
   line-height: 1.1;
   height: 600px;
-  width: auto;
+  max-width: 1440px;
 }
 .hidden {
   position: absolute;
