--- a/css/styles.css
+++ b/css/styles.css
@@ -144,9 +144,16 @@
   flex-wrap: wrap;
   row-gap: 48px;
 }
+
 .card-set-item {
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
+.card-set-item-p:hover,
+.card-set-item-p:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .card-set-item-p {
   flex-basis: calc(
     (100% - var(--indent) * (var(--items-p) - 1)) / var(--items-p)
@@ -407,6 +414,8 @@ button {
   color: var(--background-color);
   background-color: var(--color-ocean);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .port-item-text {
   padding: 32px 16px;
