--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,15 @@ button {
 .section-pad-bot {
   padding-bottom: 120px;
 }
+.principles-icons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--color-cloud);
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
 .principles-item {
 }
 .principles-section {
