--- a/css/styles.css
+++ b/css/styles.css
@@ -62,10 +62,7 @@
   color: var(--color-list);
 }
 .descr-container {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
+padding: 32px 0;
 }
 
 .card-text {
