--- a/css/styles.css
+++ b/css/styles.css
@@ -167,14 +167,8 @@ padding: 32px 0;
 }
 
 .social-item {
-  /* width: 40px;
+  width: 40px;
   height: 40px;
-  background-color: var(--color-iris);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #f4f4fd; */
 }
 .social-icon {
   fill: var(--color-cloud);
