--- a/css/styles.css
+++ b/css/styles.css
@@ -175,12 +175,14 @@
 }
 .social-link {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 12px;
+  padding-top: 12px;
   width: 100%;
   height: 100%;
   background-color: var(--color-iris);
   border-radius: 50%;
-  align-items: center;
-  justify-content: center;
 }
 
 .social-link:hover,
