--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
   margin-left: auto;
   margin-right: auto;
   font-size: 56px;
-  line-height: 1.07;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: center;
   text-decoration: none;
@@ -376,8 +376,34 @@ button {
 
 .customers-list {
   display: flex;
+  gap: 24px;
 }
-
+.customers-item{
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: var(--color-light-slate);
+  border: 1px solid var(--color-light-slate);
+  border-radius: 4px;  
+}
+.customers-link:hover,
+.customers-link:focus{
+  color: var(--color-ocean);
+  border-color: var(--color-ocean);
+}
+.customers-icon{
+ fill: currentColor;
+}
+.customers-icon:hover,
+.customers-icon:focus{
+  fill: var(--color-ocean);
+}
 /* hero */
 .hero {
   padding: 188px 0;
