--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
   margin-bottom: 72px;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.11;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
@@ -319,6 +319,38 @@ button {
   font-style: normal;
   margin-left: auto;
 }
+/* footer socials */
+.footer-social{
+  padding-top: 100px;
+  padding-left: 540px;
+}
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-icon {
+  fill: var(--color-cloud);
+}
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-iris);
+  border-radius: 50%;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--color-green);
+}
 
 /* body */
 
@@ -392,14 +424,15 @@ button {
   border: 1px solid var(--color-light-slate);
   border-radius: 4px;  
 }
+.customers-icon{
+  fill: currentColor;
+ }
 .customers-link:hover,
 .customers-link:focus{
   color: var(--color-ocean);
   border-color: var(--color-ocean);
 }
-.customers-icon{
- fill: currentColor;
-}
+
 .customers-icon:hover,
 .customers-icon:focus{
   fill: var(--color-ocean);
@@ -448,6 +481,9 @@ button {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: var(--color-navy-blue);
+}
+.footer-descr{
+  width: 100px;
 }
 
 /************* portfolio ************/
