--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,14 @@ button {
   text-transform: uppercase;
   color: var(--color-navy-blue);
 }
+
+.footer-container{
+  display: flex;
+  align-items: baseline;
+  width: 1158px;
+  padding: 0 15px;
+  margin: auto;
+}
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -320,13 +328,18 @@ button {
   margin-left: auto;
 }
 /* footer socials */
-.footer-social{
- 
+.footer-social {
+  margin-left: 120px;
+}
+.footer-social-text{
+color: var(--background-color);
+margin-bottom: 16px;
+font-weight: 500;
 }
 .footer-social-list {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 16px;
 }
 
 .footer-social-item {
@@ -365,11 +378,9 @@ button {
   padding-bottom: 100px;
   background-color: var(--color-navy-blue);
 }
-.footer-descr{
-  width: 100px;
-  margin-right: 120px;
+.footer-descr {
+  width: 264px;
 }
-
 
 /* body */
 
@@ -429,11 +440,11 @@ button {
   display: flex;
   gap: 24px;
 }
-.customers-item{
+.customers-item {
   width: calc((100% - 120px) / 6);
   height: 88px;
 }
-.customers-link{
+.customers-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -441,19 +452,19 @@ button {
   height: 100%;
   color: var(--color-light-slate);
   border: 1px solid var(--color-light-slate);
-  border-radius: 4px;  
+  border-radius: 4px;
 }
-.customers-icon{
+.customers-icon {
   fill: currentColor;
- }
+}
 .customers-link:hover,
-.customers-link:focus{
+.customers-link:focus {
   color: var(--color-ocean);
   border-color: var(--color-ocean);
 }
 
 .customers-icon:hover,
-.customers-icon:focus{
+.customers-icon:focus {
   fill: var(--color-ocean);
 }
 /* hero */
@@ -530,4 +541,8 @@ button {
   border: 1px solid var(--color-cornflower);
   border-top: none;
 }
-
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
